<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Password Manager</string>
    <string name="sampleAccountJson" tools:ignore="TypographyDashes">{\"accountName\": \"sample account\", \"username\": \"user123\", \"email\": \"user@goodmail.com\", \"password\": \"pass123\", \"phone\": \"999000888\", \"linkedAccounts\": [\"account1\", \"account2\"], \"misc\": {\"miscKey1\": \"miscVal1\", \"MiscKey2\": \"MiscVal2\"}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="sampleAccountJson2">{\"accountName\": \"goodmail\", \"username\": \"user123\", \"email\": \"user@goodmail.com\", \"password\": \"pass123\", \"phone\": \"999000888\", \"linkedAccounts\": [], \"misc\": {\"miscKey1\": \"miscVal1\", \"MiscKey2\": \"MiscVal2\"}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="sampleAccountJson3">{\"accountName\": \"happy.net\", \"username\": \"happy\", \"email\": \"user@goodmail.com\", \"password\": \"happy123\", \"phone\": \"999129126\", \"linkedAccounts\": [\"goodmail\"], \"misc\": {}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="sampleAccountJson4">{\"accountName\": \"gaoxiaoxingdong\", \"username\": \"gaoxiaoyingxiong\", \"email\": \"\", \"password\": \"heiyoheiyo\", \"phone\": \"999129126\", \"linkedAccounts\": [\"goodmail\"], \"misc\": {}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="sampleAccountJson5">{\"accountName\": \"indomie\", \"username\": \"sedap\", \"email\": \"\", \"password\": \"delicious\", \"phone\": \"\", \"linkedAccounts\": [\"goodmail 2\"], \"misc\": {}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="sampleAccountJson6">{\"accountName\": \"goodmail 2\", \"username\": \"user1234\", \"email\": \""user2@goodmail.com\", \"password\": \"pass1234\", \"phone\": \"999129126\", \"linkedAccounts\": [], \"misc\": {\"note\": \"extra goodmail account\"}, \"lastEdited\": \"2023-11-27T22:15:37\"}</string>
    <string name="button_acknowledge">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_unlocking">UNLOCKING…</string>
    <string name="status_working">Please wait…</string>

    <string name="hint_search">Type here to search</string>
    <string name="hint_new_value">Enter new value here</string>

    <string name="prompt_setup">There has been no previous data found. Looks like this is your first time using the app. Please set up a master password for security.</string>
    <string name="prompt_master_password_char_limits">Note that only alphanumeric (0-9, a-z, A-Z) and the following special characters !&quot;#$%&amp;&apos;()*+,-./:; &lt;=&gt;?@[\]^_`{|}~ will be accepted</string>
    <string name="prompt_new_password_enter">Enter new password</string>
    <string name="prompt_new_password_confirmation">Confirm new password</string>

    <string name="toast_invalid_password">Password is invalid. Try again.</string>
    <string name="toast_mismatching_password">Passwords entered do not match.</string>
    <string name="toast_data_load_failure">Error in loading data file</string>
    <string name="toast_back_press_again_log_out">Press back again to save and log out</string>
    <string name="toast_copy_suffix">copied to clipboard</string>

    <string name="dialog_new_master_password">A new data file and corresponding master password has been created</string>
    <string name="dialog_edit_account_name_title">Edit Account Name</string>
    <string name="dialog_edit_username_title">Edit Username</string>
    <string name="dialog_edit_email_title">Edit Email</string>
    <string name="dialog_edit_phone_title">Edit Phone Number</string>
    <string name="dialog_edit_password_title">Edit Password</string>
    <string name="dialog_edit_linked_accounts_title">Edit Linked Accounts</string>
    <string name="dialog_edit_previous_substring">Previously: </string>

    <string name="title_account_name">Account Name</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_phone">Phone Number</string>
    <string name="title_password">Password</string>
    <string name="title_linked_accounts">Linked Accounts</string>

    <string name="field_value_null">-</string>

    <string name="ADD_ACCOUNT">Add new account</string>
    <string name="SEARCH_ACCOUNT_NAME">Search by account name</string>
    <string name="SEARCH_USERNAME">Search by username</string>
    <string name="SEARCH_EMAIL">Search by email</string>
    <string name="SEARCH_PHONE">"Search by phone number</string>
    <string name="SEARCH_PASSWORD">Search by password</string>
    <string name="SEARCH_LINKED_ACCOUNT">Search by linked accounts</string>

    <string name="button_setup">Setup Master Password</string>

    <string name="header_new_value">New value</string>
    <string name="header_previous_value">Previously</string>
    <string name="header_edit_linked_accounts">Edit Linked Accounts</string>

    <string name="button_add_link">Add Link</string>
    <string name="alert_title_account_not_found">There is no such account</string>
    <string name="alert_title_master_password_created">New master password created</string>
    <string name="alert_message_master_password_created">This password will be used for this app at login</string>
    <string name="toast_account_link_success">Link successfully created</string>
    <string name="alert_title_account_already_linked">This account is already linked</string>
    <string name="button_done">DONE</string>
    <string name="toast_error">Something went wrong</string>
    <string name="toast_account_not_found">Account not found</string>
    <string name="toast_account_name_exists">The account name \'%1$s\' already exists</string>
    <string name="toast_account_unlink_success">Account successfully unlinked</string>
    <string name="option_add_new_link">Link to another account</string>
    <string name="hint_account_name">Enter account name here</string>
    <string name="option_add_new_misc_field">Add miscellaneous entry</string>
    <string name="hint_misc_title">Enter entry title here</string>
    <string name="hint_new_title">Enter new title here</string>
    <string name="header_misc_title">Title</string>
    <string name="alert_title_misc_title_value_empty">Delete this field from miscellaneous info?</string>
    <string name="alert_message_misc_title_value_empty">If either the title or value is empty, this miscellaneous entry will be deleted</string>
    <string name="button_delete">DELETE</string>
    <string name="alert_title_misc_delete_confirmation">Are you sure you want to delete this entry?</string>
    <string name="alert_title_unlink_account_confirm">Are you sure you want to delete this link?</string>
    <string name="alert_title_misc_title_exists">Title already exists for this account</string>
    <string name="field_empty"><![CDATA[<N/A>]]></string>
    <string name="activity_label_search_by_field">Searching By</string>
    <string name="activity_label_edit_misc">Edit Miscellaneous Entry</string>
    <string name="activity_label_edit_linked_accounts">Edit Linked Accounts</string>
    <string name="activity_label_edit_entry_prefix">Edit</string>
    <string name="activity_label_search_by_name">Search By Account Name</string>
    <string name="activity_label_account_details">Account Details</string>
    <string name="activity_label_main_menu">Main Menu</string>
    <string name="activity_label_setup">Setup</string>
    <string name="error">Error</string>
    <string name="activity_label_filtered_results">Filtered Results</string>
    <string name="IMPORT_EXPORT_DATA">Import / export data</string>
    <string name="message_import_data_warning">Warning: Import wipes all existing data and replaces it wholesale with the contents of the chosen file. Note that the chosen file\'s master password will replace the current one.</string>
    <string name="button_import_data">Import Data</string>
    <string name="message_export_prompt">Export data to a file saved on your phone as a backup. This file can be imported by the app.</string>
    <string name="button_export_data">Export Data</string>
    <string name="message_update_data">Update merges the chosen file into your existing data, keeping the most recently edited version of each account. Nothing is deleted. The current master password will be kept as is after the update.</string>
    <string name="button_update_data">Update Data</string>
    <string name="toast_update_data_success">Data successfully updated</string>
    <string name="toast_update_data_failure">Data update failed</string>
    <string name="activity_label_import_export_data">Import / Export Data</string>
    <string name="alert_message_external_storage_permissions_needed">The app requires external storage permissions in order to export and import of data files</string>
    <string name="alert_title_permission_denied">Permission(s) Denied</string>
    <string name="toast_import_data_success">Data successfully imported</string>
    <string name="toast_import_data_failure">Data import failed</string>
    <string name="alert_title_legacy_import">Data upgraded</string>
    <string name="alert_message_legacy_import">The imported file used an older encryption format. Your data was imported successfully and has been re-saved using the current, stronger encryption.</string>
    <string name="toast_export_data_success">Data exported successfully</string>
    <string name="toast_export_data_failure">Data export failed</string>
    <string name="prompt_password_enter">Enter Master Password</string>
    <string name="prompt_import_data_password_enter">Enter the Master Password for the imported data</string>
    <string name="hint_input">Enter here</string>
    <string name="activity_label_filtered_results_prefix">"Accounts with"</string>
    <string name="alert_title_biometric_verification">User verification required</string>
    <string name="alert_subtitle_biometric_verification">Log in using your biometric credential</string>
    <string name="toast_reminder_biometrics_setup">Please setup biometric authentication on your phone for greater security</string>
    <string name="alert_title_biometric_setup">Biometric verification setup</string>
    <string name="alert_message_biometric_setup">This app needs your phone\'s biometrics for security. You will now be redirected to set it up.</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="alert_title_account_delete_confirmation">Are you sure you want to delete this account?</string>
    <string name="alert_message_account_delete_confirmation">Account cannot be recovered. All other accounts will lose their link to this account. </string>
    <string name="title_last_edited">Last Edited</string>
</resources>
