<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStringActivity">

  <TextView
      android:id="@+id/tvPreviously"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/header_previous_value"
      android:textSize="@dimen/account_details_field_title_text_size"
      app:layout_constraintBottom_toTopOf="@+id/tvPreviousValue"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/tvPreviousValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/field_value_null"
      android:textSize="@dimen/account_details_field_value_text_size"
      app:layout_constraintBottom_toTopOf="@+id/tvNewValue"
      app:layout_constraintStart_toStartOf="parent" />


  <TextView
      android:id="@+id/tvNewValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/header_new_value"
      android:textSize="@dimen/account_details_field_title_text_size"
      app:layout_constraintBottom_toTopOf="@+id/etNewValue"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/etNewValue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:ems="10"
      android:hint="@string/hint_new_value"
      android:inputType="text"
      android:textSize="@dimen/account_details_field_value_text_size"
      android:imeOptions="actionDone"
      android:singleLine="true"
      app:layout_constraintBottom_toTopOf="@id/btnSubmit"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btnSubmit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="24dp"
      android:text="@string/button_confirm"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>