<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMiscActivity">

    <TextView
        android:id="@+id/tvNewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/header_misc_title"
        android:textSize="@dimen/account_details_field_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etNewTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_min_multiline_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_new_title"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textSize="@dimen/account_details_field_value_text_size"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tvNewValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvNewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/header_new_value"
        android:textSize="@dimen/account_details_field_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/etNewValue"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNewValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_min_multiline_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_new_value"
        android:inputType="textMultiLine"
        android:textSize="@dimen/account_details_field_value_text_size"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>