<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditLinkedAccountsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEditLinkedAccounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddNewLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEditLinkedAccounts">

        <ImageView
            android:id="@+id/ivLinkedAccountAdd"
            android:layout_width="@dimen/drawable_size"
            android:layout_height="@dimen/drawable_size"
            android:layout_marginEnd="@dimen/margin_end_icons"
            android:layout_marginStart="@dimen/margin_start_icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_circle_24" />

        <EditText
            android:id="@+id/etAddLinkedAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_account_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text"
            android:textSize="@dimen/edit_text_text_size"
            android:visibility="invisible"
            android:layout_marginEnd="@dimen/margin_start_icons"
            app:layout_constraintEnd_toStartOf="@id/ivLinkedAccountAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvAddNewLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/option_add_new_link"
            android:textSize="@dimen/edit_text_text_size"
            android:visibility="visible"
            android:layout_marginEnd="@dimen/margin_start_icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivLinkedAccountAdd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add_link"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_done"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>